--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </ul>
     </nav>
     <div class="container">
-      <img class="cover" src="img/cover.jpg" />
+      <img class="cover" src="cover.jpg" />
       <div class="coverText"><h1>All that glitters is not gold</h1></div>
     </div>
     </div>
